# python-toml-to-dataclass

./: .gitignore  README.md  UnitTestDataFrame.py  elapsekeeper.py  func_duplicate.py  pandas_df.py  polars_df.py  pyproject.toml  try.py  typi.py  untomler.py
tests/: test_bencher.py
