[tool.poetry]
name = "toml-schema"
version = "0.1.0"
description = ""
authors = ["Pytgaen <32298455+pytgaen@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
tomli = "^2.0.0"
tomli-w = "^1.0.0"
typical = "^2.8.0"
genson = "^1.2.2"
fire = "^0.4.0"
polars = "^0.10.27"
pandas = "^1.3.4"
pytest = "^6.2.5"
libcst = "^0.3.23"
xxhash = "^2.0.2"
cattrs = "^1.10.0"

[tool.poetry.dev-dependencies]
#poethepoet = "^0.12.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

